<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:paddingTop="55dp"
            android:background="@color/input_backg_color"
            android:ems="10"
            android:gravity="end"
            android:inputType="none"
            android:textSize="30sp"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="end"
            android:background="@color/input_backg_color"
            android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/butdelet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_backspace"
                android:contentDescription="@string/backspace_image_desc"
                app:srcCompat="@drawable/ic_backspace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/butc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/oper_button"
                    android:text="@string/clear_string"
                    android:textColor="@color/oper_text_color"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/butbra"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/oper_button"
                    android:text="@string/bracket_string"
                    android:textColor="@color/oper_text_color"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/but100"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/oper_button"
                    android:text="@string/percentage_string"
                    android:textColor="@color/oper_text_color"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/butdivi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/oper_button"
                    android:text="@string/divide_string"
                    android:textColor="@color/oper_text_color"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/but7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/numbers_button"
                    android:text="@string/seven_string"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/but8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/numbers_button"
                    android:text="@string/eight_string"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/but9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/numbers_button"
                    android:text="@string/nine_string"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/butmult"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/oper_button"
                    android:contentDescription="@string/mult_image_desc"
                    android:text="@string/mult_string"
                    android:textSize="24sp"
                    app:srcCompat="@drawable/ic_mult" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/but4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/numbers_button"
                    android:text="@string/four_string"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/but5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/numbers_button"
                    android:text="@string/five_string"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/but6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/numbers_button"
                    android:text="@string/six_string"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/butmin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/oper_button"
                    android:contentDescription="@string/minus_button_desc"
                    android:text="@string/minus_string"
                    android:textSize="24sp"
                    app:srcCompat="@drawable/ic_min" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/but1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/numbers_button"
                    android:text="@string/one_string"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/but2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/numbers_button"
                    android:text="@string/two_string"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/but3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/numbers_button"
                    android:text="@string/three_string"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/butplus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/oper_button"
                    android:contentDescription="@string/plus_button_desc"
                    android:text="@string/plus_string"
                    android:textSize="24sp"
                    app:srcCompat="@drawable/ic_add" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/butv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/numbers_button"
                    android:text="@string/dot_string"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/but0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/numbers_button"
                    android:text="@string/zero_string"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/butsin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/numbers_button"
                    android:text="@string/plusorminus_string"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/butequl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/equl_button"
                    android:text="@string/equal_string"
                    android:textColor="@color/equl_text_color"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
